--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"browser-sync": "^2.14.3",
+		"browser-sync": "^2.24.1",
 		"gulp": "^3.9.1",
 		"gulp-autoprefixer": "^4.0.0",
 		"gulp-changed": "^3.1.1",
-		"gulp-clean-css": "^3.4.1",
+		"gulp-clean-css": "^3.9.3",
 		"gulp-coffee": "^2.3.2",
 		"gulp-concat": "^2.6.0",
 		"gulp-imagemin": "^3.4.0",
 		"gulp-install": "^1.1.0",
 		"gulp-plumber": "^1.1.0",
 		"gulp-rename": "^1.2.2",
-		"gulp-sass": "^3.1.0",
+		"gulp-sass": "^3.2.1",
 		"gulp-uglify": "^3.0.0",
 		"streamqueue": "^1.1.1"
 	},
 	"dependencies": {
 		"gulp-install": "^1.1.0",
-		"node-sass": "^4.7.2",
+		"node-sass": "^4.9.0",
 		"onscreen": "^1.1.3",
-		"sass": "^1.0.0-beta.4"
+		"sass": "^1.3.0"
 	}
 }
