--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	},
 	"dependencies": {
 		"gulp-install": "^1.1.0",
+		"hoek": "^5.0.3",
 		"node-sass": "^4.9.0",
 		"onscreen": "^1.1.3",
 		"sass": "^1.3.0"
