--- a/package.json
+++ b/package.json
@@ -13,25 +13,25 @@
 	"license": "ISC",
 	"devDependencies": {
 		"browser-sync": "^2.26.7",
-		"gulp": "^4.0.2",
+		"gulp": "^4.0.0",
 		"gulp-autoprefixer": "^4.0.0",
 		"gulp-changed": "^3.1.1",
-		"gulp-clean-css": "^3.10.0",
+		"gulp-clean-css": "^3.4.1",
 		"gulp-coffee": "^2.3.2",
 		"gulp-concat": "^2.6.0",
 		"gulp-imagemin": "^5.0.3",
 		"gulp-install": "^1.1.0",
-		"gulp-plumber": "^1.2.1",
-		"gulp-rename": "^1.4.0",
+		"gulp-plumber": "^1.1.0",
+		"gulp-rename": "^1.2.2",
 		"gulp-sass": "^4.0.2",
-		"gulp-uglify": "^3.0.2",
+		"gulp-uglify": "^3.0.0",
+		"jquery": "^3.2.1",
 		"streamqueue": "^1.1.1"
 	},
 	"dependencies": {
 		"gulp-install": "^1.1.0",
-		"hoek": "^5.0.3",
-		"node-sass": "^4.12.0",
-		"onscreen": "^1.3.3",
-		"sass": "^1.22.10"
+		"install": "^0.12.1",
+		"npm": "^6.11.2",
+		"onscreen": "^1.1.3"
 	}
 }
