--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"streamqueue": "^1.1.1"
 	},
 	"dependencies": {
+		"gulp-csso": "^4.0.1",
 		"gulp-install": "^1.1.0",
 		"install": "^0.12.1",
 		"npm": "^6.4.1",
